--- a/airflow.cfg
+++ b/airflow.cfg
@@ -60,7 +60,7 @@ test_connection = Disabled
 max_templated_field_length = 4096
 [database]
 alembic_ini_file_path = alembic.ini
-sql_alchemy_conn = postgresql+psycopg2://airflow:airflow@postgres:5432/airflow
+sql_alchemy_conn = mysql+mysqldb://airflow_user:your_password@localhost:3306/airflow_db
 # sql_alchemy_engine_args = 
 sql_engine_encoding = utf-8
 # sql_engine_collation_for_ids = 
@@ -76,7 +76,7 @@ load_default_connections = True
 max_db_retries = 3
 check_migrations = True
 [logging]
-base_log_folder = /home/development/airflow/logs
+base_log_folder = /home/development/airflow/docker_cicd_test/logs
 remote_logging = False
 remote_log_conn_id = 
 delete_local_logs = False
@@ -100,7 +100,7 @@ secret_mask_adapter =
 task_log_prefix_template = 
 log_filename_template = dag_id={{ ti.dag_id }}/run_id={{ ti.run_id }}/task_id={{ ti.task_id }}/{%% if ti.map_index >= 0 %%}map_index={{ ti.map_index }}/{%% endif %%}attempt={{ try_number }}.log
 log_processor_filename_template = {{ filename }}.log
-dag_processor_manager_log_location = /home/development/airflow/logs/dag_processor_manager/dag_processor_manager.log
+dag_processor_manager_log_location = /home/development/airflow/docker_cicd_test/logs/dag_processor_manager/dag_processor_manager.log
 dag_processor_manager_log_stdout = False
 task_log_reader = task
 extra_logger_names = 
@@ -177,7 +177,7 @@ default_queue = default
 allow_illegal_arguments = False
 [webserver]
 access_denied_message = Access is Denied
-config_file = /home/development/airflow/webserver_config.py
+config_file = /home/development/airflow/docker_cicd_test/webserver_config.py
 base_url = http://localhost:8080
 default_ui_timezone = UTC
 web_server_host = 0.0.0.0
@@ -283,7 +283,7 @@ enable_health_check = False
 scheduler_health_check_server_host = 0.0.0.0
 scheduler_health_check_server_port = 8974
 orphaned_tasks_check_interval = 300.0
-child_process_log_directory = /home/development/airflow/logs/scheduler
+child_process_log_directory = /home/development/airflow/docker_cicd_test/logs/scheduler
 scheduler_zombie_task_threshold = 300
 zombie_detection_interval = 10.0
 catchup_by_default = True
