--- a/airflow.cfg
+++ b/airflow.cfg
@@ -60,7 +60,7 @@ test_connection = Disabled
 max_templated_field_length = 4096
 [database]
 alembic_ini_file_path = alembic.ini
-sql_alchemy_conn = mysql+mysqldb://airflow_user:your_password@localhost:3306/airflow_db?unix_socket=/var/run/mysqld/mysqld.sock
+sql_alchemy_conn = mysql+mysqldb://airflow_user:your_password@mysql_host:3306/airflow_db
 
 # sql_alchemy_engine_args = 
 sql_engine_encoding = utf-8
